force-app/src/objects/TR1__LinkedIn_App__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is created to store the client id and customer secret key of Parent and child Applications</description>
    <fields>
        <fullName>TR1__ChildApp_ClientId__c</fullName>
        <description>This Field is created to store the client id of the child application</description>
        <label>ChildApp_ClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ChildApp_ClientSecret__c</fullName>
        <description>This Field is created to store the Client Secret Key of the child application</description>
        <label>ChildApp_ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ChildApp_Key__c</fullName>
        <label>ChildApp Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Copy_Job_Country_from_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created To stamp Job Country from Account.</description>
        <inlineHelpText>Used to autopopulate Country field on Job record using Country value for Account</inlineHelpText>
        <label>Copy Job Country from Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Count__c</fullName>
        <defaultValue>&quot;100&quot;</defaultValue>
        <description>Acc: Used in Retrieve SeatHolders APi</description>
        <label>Count</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EasyApplyClientId__c</fullName>
        <description>This Field is created to store the Client ID of the child application for Easy Apply product</description>
        <label>EasyApplyClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EasyApplyClientSecretKey__c</fullName>
        <description>This Field is created to store the Client Secret Key of the child application for Easy Apply product</description>
        <label>EasyApplyClientSecretKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EasyApplyCount__c</fullName>
        <defaultValue>&quot;100&quot;</defaultValue>
        <label>EasyApply Count</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EasyApplyStart__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <label>EasyApply Start</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EasyApply_MaxBatchSize__c</fullName>
        <description>Max batch size for easy apply product</description>
        <label>EasyApply Max Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Email_To__c</fullName>
        <defaultValue>&apos;admin@talentrover.com&apos;</defaultValue>
        <description>Used to Store email ids to send Emails if maximum records in batch exceeds.</description>
        <label>Email To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__End_Time__c</fullName>
        <description>This is the End Time used for getting the inMail history for a Candidate.</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__LK_Domain__c</fullName>
        <description>Created to Store org Domain used in UpdateChild Functinality for RSC</description>
        <label>LK_Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__LinkedIn_CallbackURL__c</fullName>
        <description>Created to store callback URL for Export candidate in RSC.</description>
        <label>LinkedIn CallbackURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Max_Batch_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Max Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Maximum_Record_Size__c</fullName>
        <defaultValue>5000</defaultValue>
        <description>Created to Limit the Records to Process From Batch Class.</description>
        <label>RSC Maximum Record Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__ParentApp_ClientId__c</fullName>
        <defaultValue>&quot;77eusmcrcvpegf&quot;</defaultValue>
        <description>This field is created to store the Client ID of the parent Application</description>
        <label>ParentApp ClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ParentApp_ClientSecret__c</fullName>
        <defaultValue>&quot;4rxJZwNrcCfHKUPy&quot;</defaultValue>
        <description>This field is created to store the Client Secret key of the Parent Application</description>
        <label>ParentApp ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Parent_OrganizationId__c</fullName>
        <description>Stored the Organization id obtained from test credentials</description>
        <label>Parent OrganizationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__RSC_Email_Alert_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Linkedin Integration:Created to Send Email to admin if this checkbox is True.</description>
        <label>RSC Email Alert Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__RSC_Email_Alert_Subject__c</fullName>
        <description>Email</description>
        <label>RSC Email Alert Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Start_Time__c</fullName>
        <description>This is the Start Time used for getting the inMail history for a Candidate.</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Start__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Created For Retrieve SeatHolders API</description>
        <label>Start</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Timeout__c</fullName>
        <defaultValue>120000</defaultValue>
        <description>Creation to set Timeout for callouts.</description>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__TotalRecords__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Created for Pagination used in retrieve seatholders API</description>
        <label>TotalRecords</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__UniqueForeignId__c</fullName>
        <description>created To Store UniqueForeignID</description>
        <label>UniqueForeignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>(Deprecated)LinkedIn App</label>
</CustomObject>